<resources>
    <string name="app_name">Ya En Casa</string>
    <string name="find_product">Buscar producto</string>
    <string name="products">Productos</string>
    <string name="edit_products">Editar Productos</string>
    <string name="category">Categorías</string>
    <string name="shopping_cart">Carrito</string>
    <string name="menu">Menú</string>
    <string name="imagen_de_la_empresa">Imagen de la empresa</string>
    <string name="contact">Contacto</string>
    <string name="correo">Correo</string>
    <string name="numero_de_telefono">Numero de telefono</string>
    <string name="phone_number_client">+53 53720001</string>
    <string name="about_us">Sobre nosotros</string>
    <string name="t_rmino_de_uso">Término de uso</string>
    <string name="about_developer">Desarrolladores</string>
    <string name="open">Abierto</string>
    <string name="close">Cerrado</string>
    <string name="little_description">Descripción del producto....</string>
    <string name="name_product">Nombre del producto</string>
    <string name="price_default">0.00</string>
    <string name="Productos">Productos</string>
    <string name="Precio">Precio:</string>
    <string name="Nombre_del_producto">Nombre del producto</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Editar">Editar</string>
    <string name="Agregar_producto">Agregar producto</string>
    <string name="Producto">Producto</string>
    <string name="Descripcion">Descripción</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Agregar">Agregar</string>
    <string name="Vsibilidad">Visibilidad</string>
    <string name="_0CUP">0.00 CUP</string>
    <string name="Sobre_nosotros">Sobre nosotros</string>
    <string name="Sobre_los_desarrolladores">Desarrolladores</string>
    <string name="Terminos_de_uso">Términos de uso</string>
    <string name="Pedidos">Pedidos</string>
    <string name="Imagen_de_la_empresa">Imagen de la empresa</string>
    <string name="Contacto">Contacto</string>
    <string name="Carrito">Carrito</string>
    <string name="Numero_de_telefono">Número de teléfono</string>
    <string name="_5352364120">+5353005611</string>
    <string name="Se_ha_producido_un_error">Se ha producido un error</string>
    <string name="Revise_su_conexion">Revise su conexión a Internet e intente de nuevo</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Agregando_producto">Agregando producto</string>
    <string name="Espere">Por favor, espere…</string>
    <string name="existe_ya_producto_con_este_nombre">Existe ya un producto con este nombre</string>
    <string name="Este_campo_no_puede_vacio">Este campo no puede estar vacío</string>
    <string name="no">no</string>
    <string name="Demasiados_elementos">Demasiados elementos</string>
    <string name="Ha_excedido_numero_maximo_productos">Ha excedido el número máximo de elementos permitidos. Contacte al equipo de desarrollo de la aplicación para incrementar esta cantidad.</string>
    <string name="Ha_excedido_numero_maximo_categorias">Ha excedido el número máximo de categorias permitidos. Contacte al equipo de desarrollo de la aplicación para incrementar esta cantidad.</string>
    <string name="No_hay_productos">No hay productos en esta categoría</string>
    <string name="Cantidad">Cantidad</string>
    <string name="Menos">Menos</string>
    <string name="error">Se ha producido un error</string>
    <string name="error_obtener_imagen">Error al obtener imagen</string>
    <string name="Al_carrito">Al carrito</string>
    <string name="cerrar">Cerrar</string>
    <string name="Categor_as">Categorías</string>
    <string name="imagen_categor_a">Imagen categoría</string>
    <string name="Vacio">Vacío</string>
    <string name="Todas_las_categorias">Todas las categorías</string>
    <string name="Cerrar">Cerrar</string>
    <string name="Cargando_datos">Cargando datos</string>
    <string name="Reintentar">Reintentar</string>
    <string name="Ocultar">Ocultar</string>
    <string name="Mostrar">Mostrar</string>
    <string name="Eliminar_producto">Eliminar producto</string>
    <string name="Desea_eliminar_producto">¿Desea realmente eliminar el producto?</string>
    <string name="Si">Sí</string>
    <string name="No">No</string>
    <string name="Actualizando">Actualizando producto</string>
    <string name="Eliminando_producto">Eliminando producto</string>
    <string name="Buscar_producto">Buscar producto</string>
    <string name="Categorias">Categorías</string>
    <string name="enviar">Enviar</string>
    <string name="Opciones">Opciones</string>
    <string name="en_espera">En espera</string>
    <string name="numero_telefono">Teléfono:</string>
    <string name="direccion">Dirección:</string>
    <string name="finalizar">Finalizar</string>
    <string name="no_pedido">No.Pedido:</string>
    <string name="Ex_1253">1253</string>
    <string name="En_espera_extendido">Su pedido está en espera de ser aceptado, cuando sea aceptado será enviado a su dirección</string>
    <string name="politica_privacidad_texto">
        La aplicación de Ya En Casa es un software móvil a través del cual el usuario puede ordenar un pedido de compra referente a productos de diversa índole del negocio que lleva el mismo nombre de la aplicación.
        \nLa presente Política de Privacidad establece los términos en que Ya En Casa usa y protege la información proporcionada por los usuarios al momento de usar la aplicación. Esta Política de Privacidad puede cambiar con el tiempo por lo que recomendamos revisar continuamente esta página para asegurarse que está de acuerdo con dichos cambios.\n
\nInformación que es recogida:\n
\nLa información es brindada por el mismo usuario. Tomamos latitud, longitud y dirección para poder saber cuál será la ubicación y entregar el pedido, también utilizaremos el número móvil del cliente para su comunicación en caso de cualquier percance y el nombre de la persona a entregar para que sea el titular quien reciba.\n
\nInformación de terceros:\n\n
El contenido es brindado por Ya En Casa, los creadores no nos responsabilizamos de dicho contenido.No nos responsabilizamos por los datos dados por el usuario que no se correspondan con latitud, longitud, dirección y nombre. Está aplicación no comparte datos con terceros.
    </string>
    <string name="licencia_texto">
        La aplicación de Ya En Casa está bajo el uso de la licencia Creative Commons.\n\n
¿Cómo funcionan las Licencias Creative Commons?\n\n
Las licencias Creative Commons  se basan en el derecho de autor, con lo cual la obra sigue perteneciendo al  dominio privativo, pero con excepciones y limitaciones que son elegidas y explicitadas por el autor de la obra.  Un autor, que desea otorgar algunos permisos sobre su trabajo, para que terceros puedan copiarlo, o modificarlo  sin problemas de copyright, puede licenciar su obra bajo una licencia CC y de esa forma explicitar su voluntad de que la obra circule sin restricciones legales.
\n\nEsta licencia contiene:
Reconocimiento-NoComercial-SinDerivadas 4.0 Internacional (CC BY-NC-ND 4.0).\n
\nEres libre de : Compartir copiar y redistribuir el material en cualquier medio o formato.
El licenciante no puede revocar estas libertades mientras siga los siguientes términos de la licencia:\n
\nReconocimiento : Debe otorgar el crédito correspondiente , proporcionar un enlace a la licencia e indicar si se realizaron cambios . Puede hacerlo de cualquier manera razonable, pero no de ninguna manera que sugiera que el licenciante lo respalda a usted o su uso.\n
\nNo comercial : No puede utilizar el material con fines comerciales.\n
\nNo Derivatives : Si remezcla, transforma o construye sobre el material, no puede distribuir el material modificado.\n
\nSin restricciones adicionales : No puede aplicar términos legales o medidas tecnológicas que restrinjan legalmente a otros de hacer cualquier cosa que permita la licencia.
\n\n------------------------------\n\n
Licencia para grupos de terceros---Ucrop
Copyright 2017, Yalantis
  Con licencia de Apache License, Versión 2.0 no puede usar este archivo excepto de conformidad con la Licencia. Puede obtener una copia de la Licencia en: http:------www.apache.org---licenses---LICENSE-2.0.
  A menos que lo exija la ley aplicable o se acuerde por escrito, el software distribuido bajo la Licencia se distribuye "TAL CUAL", SIN GARANTÍAS NI CONDICIONES DE NINGÚN TIPO, ya sean expresas o implícitas. Consulte la Licencia para conocer el idioma específico que rige los permisos y limitaciones bajo la Licencia.
\n\n------------------------------\n\n
Licencia para grupo de terceros---Glide
Copyright 2014 Google, Inc. Todos los derechos reservados.
La redistribución y el uso en formato fuente y binario, con o sin modificación, están permitidos siempre que se cumplan las siguientes condiciones:
 1. Las redistribuciones del código fuente deben conservar el aviso de derechos de autor anterior, esta lista de condiciones y el siguiente aviso legal.
 2. Las redistribuciones en forma binaria deben reproducir el aviso de derechos de autor anterior, esta lista de condiciones y el siguiente descargo de responsabilidad en la documentación y---u otros materiales proporcionado con la distribución.
ESTE SOFTWARE ES PROPORCIONADO POR GOOGLE, INC. TAL CUAL Y CUALQUIER  EXPLÍCITO O IMPLÍCITO GARANTÍAS, INCLUIDAS, ENTRE OTRAS, LAS GARANTÍAS IMPLÍCITAS DE COMERCIABILIDAD Y SE RENUNCIA A LA IDONEIDAD PARA UN PROPÓSITO PARTICULAR. EN NINGÚN CASO GOOGLE, INC. O LOS COLABORADORES SERÁN RESPONSABLES DE CUALQUIER DAÑO DIRECTO, INDIRECTO, INCIDENTAL, ESPECIAL, EJEMPLAR O DAÑOS CONSECUENTES (INCLUYENDO, ENTRE OTROS, ADQUISICIÓN DE BIENES SUSTITUTOS O SERVICIOS; PÉRDIDA DE USO, DATOS O BENEFICIOS; O INTERRUPCIÓN DEL NEGOCIO) CUALQUIERA QUE SE CAUSE Y EN CUALQUIER TEORÍA DE RESPONSABILIDAD, YA SEA POR CONTRATO, RESPONSABILIDAD ESTRICTA O AGRAVIO (INCLUYENDO NEGLIGENCIA U OTRA) QUE SURJA DE CUALQUIER MANERA DEL USO DE ESTE SOFTWARE, INCLUSO SI ADVERTIDO DE LA POSIBILIDAD DE TALES DAÑOS.
  Las opiniones y conclusiones contenidas en el software y la documentación son las del autor y no debe interpretarse como representación de políticas oficiales, expresadas o implícitas, de Google, Inc.
\n\n------------------------------\n\n
Licencia para grupo de terceros---Gson  Copyright 2008 Google Inc.
  Con licencia de Apache License, Versión 2.0 no puede usar este archivo excepto de conformidad con la Licencia. Puede obtener una copia de la Licencia en: http:------www.apache.org---licenses---LICENSE-2.0
  A menos que lo exija la ley aplicable o se acuerde por escrito, el software distribuido bajo la Licencia se distribuye "TAL CUAL", SIN GARANTÍAS NI CONDICIONES DE NINGÚN TIPO, ya sean expresas o implícitas. Consulte la Licencia para conocer el idioma específico que rige los permisos y limitaciones bajo la Licencia.
    </string>
    <string name="licencia">Licencia:</string>
    <string name="t_rminos_y_condiciones_de_uso">Términos y condiciones de uso:</string>
    <string name="pedidos">Pedidos</string>
    <string name="Nombre">Nombre</string>
    <string name="nombre_dosp">Nombre:</string>
    <string name="zona_a_entregar">Zona a entregar:</string>
    <string name="_10_4_2022">10/4/2022</string>
    <string name="_59134571">59134571</string>
    <string name="_500">500 $</string>
    <string name="_1_producto_x4_500_n_1_1_queso_n_1_2_mortadella">1. Producto x4 ------------------------ 500 $\n 1.1--------Queso\n 1.2--------Mortadella</string>
    <string name="la_direccion_es_ave_52_37_y_39_delante_de_un_edificio_rojo_que_tiene_un_elefante_pintado">La direccion es Ave 52//37 y 39. Delante de un edificio rojo que tiene un elefante pintado</string>
    <string name="date">Fecha:</string>
    <string name="zona">Zona</string>
    <string name="zonas">Zonas</string>
</resources>