<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/header_header"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:contentDescription="@string/imagen_de_la_empresa"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_header">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12sp"
            android:layout_marginTop="12sp"
            android:text="@string/contact"
            android:textSize="@dimen/medium"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="26sp"
            android:layout_marginTop="12sp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/correo"
                android:src="@drawable/mail" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="4sp"
                android:text=""
                android:textSize="@dimen/medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="26sp"
            android:layout_marginTop="12sp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/numero_de_telefono"
                android:src="@drawable/call" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="4sp"
                android:text="@string/phone_number_client"
                android:textSize="@dimen/medium" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5sp"
            android:layout_marginStart="40sp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="40sp"
            android:background="@color/white_gray" />



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
